# gpgenetic

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
include/: Gene.hpp
src/: Gene.cpp
src/lib/: Gene.cpp
test/: test_Gene.cpp
